updated my blog

--- a/_sass/_common.scss
+++ b/_sass/_common.scss
@@ -97,10 +97,10 @@ header {
   font-size: 10px;
 }
 
-.row {
-  margin-right: -47px;
-  margin-left: -81px;
-}
+// .row {
+//   margin-right: -47px;
+//   margin-left: -81px;
+// }
 
 .about-paragraph{
   font-size: 20px;
